@@ -26,36 +26,38 @@ public class OptionArbitrageController {
     private final OptionArbHistoryService historyService;
     private final BidParityService bidParityService;
     private final BoxSpreadService boxSpreadService;
+    private final CalendarSpreadService calendarSpreadService;
+    private final JellyRollService jellyRollService;
     private final ZerodhaSpotPriceFetcher spotFetcher;
+    private final OptionArbAutoExecService autoExecService;
+    private final LivePositionRepository livePositionRepo;
+    private final BidParityPaperSimulator paperSimulator;
+    private final SignalTradeBookService tradeBookService;
 
-    private final Map<String, Object> autoExecSettings = new ConcurrentHashMap<>();
     private final List<Map<String, Object>> auditLogs = Collections.synchronizedList(new ArrayList<>());
 
     public OptionArbitrageController(OptionChainService optionChainService,
                                      OptionArbHistoryService historyService,
                                      BidParityService bidParityService,
                                      BoxSpreadService boxSpreadService,
-                                     ZerodhaSpotPriceFetcher spotFetcher) {
+                                     CalendarSpreadService calendarSpreadService,
+                                     JellyRollService jellyRollService,
+                                     ZerodhaSpotPriceFetcher spotFetcher,
+                                     OptionArbAutoExecService autoExecService,
+                                     LivePositionRepository livePositionRepo,
+                                     BidParityPaperSimulator paperSimulator,
+                                     SignalTradeBookService tradeBookService) {
         this.optionChainService = optionChainService;
         this.historyService = historyService;
         this.bidParityService = bidParityService;
         this.boxSpreadService = boxSpreadService;
+        this.calendarSpreadService = calendarSpreadService;
+        this.jellyRollService = jellyRollService;
         this.spotFetcher = spotFetcher;
-
-        autoExecSettings.put("normalParityEnabled", true);
-        autoExecSettings.put("normalEntryEdge", 150.0);
-        autoExecSettings.put("normalExitEdge", 20.0);
-        autoExecSettings.put("normalMaxSets", 5);
-
-        autoExecSettings.put("bidParityEnabled", true);
-        autoExecSettings.put("bidEntryEdge", 300.0);
-        autoExecSettings.put("bidExitEdge", 50.0);
-        autoExecSettings.put("bidMaxSets", 3);
-
-        autoExecSettings.put("scanInterval", 1);
-        autoExecSettings.put("maxDailyLoss", 5000.0);
-        autoExecSettings.put("status", "IDLE");
-
+        this.autoExecService = autoExecService;
+        this.livePositionRepo = livePositionRepo;
+        this.paperSimulator = paperSimulator;
+        this.tradeBookService = tradeBookService;
         addAuditLog("SYSTEM", "INFO", "Option Arbitrage Engine initialized. Ready for scanning.");
     }
 
@@ -111,6 +113,8 @@ public class OptionArbitrageController {
         List<Map<String, Object>> boxOpps = boxSpreadService.scanBoxSpread(underlying);
         if (boxOpps != null) opps.addAll(boxOpps);
 
+        if (!opps.isEmpty()) triggerAutoExec();
+
         Map<String, Object> resp = new LinkedHashMap<>();
         resp.put("timestamp", System.currentTimeMillis());
         resp.put("underlying", underlying);
@@ -123,49 +127,438 @@ public class OptionArbitrageController {
     }
 
     @GetMapping("/bid-parity/scan")
-    public ResponseEntity<Map<String, Object>> scanBidParity(@RequestParam(defaultValue = "ALL") String underlying) {
+    public ResponseEntity<Map<String, Object>> scanBidParity(
+            @RequestParam(defaultValue = "ALL") String underlying,
+            @RequestParam(defaultValue = "MONTHLY") String expiry,
+            @RequestParam(defaultValue = "300") double minEdge) {
         java.time.LocalTime nowIST = java.time.LocalTime.now(java.time.ZoneId.of("Asia/Kolkata"));
         if (nowIST.isBefore(java.time.LocalTime.of(9, 15)) || nowIST.isAfter(java.time.LocalTime.of(15, 30))) {
-            return ResponseEntity.ok(Map.of(
-                "timestamp", System.currentTimeMillis(),
-                "underlying", underlying,
-                "marketClosed", true,
-                "opportunities", Collections.emptyList(),
-                "count", 0,
-                "reason", "Market closed. NSE/NFO hours: Mon-Fri 09:15-15:30 IST."
-            ));
+            long t0 = System.currentTimeMillis();
+            List<Map<String, Object>> today = tradeBookService.todaysLiveBoardSignals(underlying, expiry, minEdge);
+            Map<String, Object> closed = new LinkedHashMap<>();
+            closed.put("timestamp", System.currentTimeMillis());
+            closed.put("underlying", underlying);
+            closed.put("expiryMode", expiry);
+            closed.put("marketClosed", true);
+            closed.put("fromTodayBoard", true);
+            closed.put("opportunities", today);
+            closed.put("count", today.size());
+            closed.put("scanMs", System.currentTimeMillis() - t0);
+            closed.put("reason", "Market closed — showing today's Bid Parity signals (Live board).");
+            closed.put("parityModel", "BLACK76_FUTURES");
+            closed.put("note", "After hours: Live Signals defaults to today's saved prints (≥ min edge).");
+            return ResponseEntity.ok(closed);
         }
-        List<Map<String, Object>> opps = bidParityService.scanBidParity(underlying);
+        long t0 = System.currentTimeMillis();
+        List<Map<String, Object>> opps = bidParityService.scanBidParity(underlying, expiry);
+        boolean timedOut = bidParityService.consumeLastScanTimedOut();
+        long scanMs = System.currentTimeMillis() - t0;
+        if (opps != null && !opps.isEmpty()) triggerAutoExec();
+        // If live scan is empty, still surface today's board so the tab is never blank by default
+        boolean usedTodayFallback = false;
+        if ((opps == null || opps.isEmpty()) && !timedOut) {
+            List<Map<String, Object>> today = tradeBookService.todaysLiveBoardSignals(underlying, expiry, minEdge);
+            if (!today.isEmpty()) {
+                opps = today;
+                usedTodayFallback = true;
+            }
+        }
         Map<String, Object> resp = new LinkedHashMap<>();
         resp.put("timestamp", System.currentTimeMillis());
         resp.put("underlying", underlying);
+        resp.put("expiryMode", expiry);
         resp.put("marketClosed", false);
-        resp.put("opportunities", opps);
-        resp.put("count", opps.size());
+        resp.put("fromTodayBoard", usedTodayFallback);
+        resp.put("opportunities", opps != null ? opps : Collections.emptyList());
+        resp.put("count", opps != null ? opps.size() : 0);
+        resp.put("scanMs", scanMs);
+        resp.put("timedOut", timedOut);
+        resp.put("parityModel", "BLACK76_FUTURES");
+        resp.put("note", usedTodayFallback
+                ? "No fresh live prints — showing today's saved Bid Parity signals."
+                : "Black-76 futures parity. Weekly uses ATM-implied forward when index spot missing; hedge is monthly FUT.");
+        if (timedOut && (opps == null || opps.isEmpty())) {
+            resp.put("reason", "Scan timed out waiting on broker quotes — retry Refresh (or pick a single index).");
+        }
         return ResponseEntity.ok(resp);
     }
 
-    @GetMapping("/box-spread/scan")
-    public ResponseEntity<Map<String, Object>> scanBoxSpread(@RequestParam(defaultValue = "ALL") String underlying) {
-        java.time.LocalTime nowIST = java.time.LocalTime.now(java.time.ZoneId.of("Asia/Kolkata"));
-        if (nowIST.isBefore(java.time.LocalTime.of(9, 15)) || nowIST.isAfter(java.time.LocalTime.of(15, 30))) {
+    @GetMapping("/bid-parity/history")
+    public ResponseEntity<Map<String, Object>> bidParityHistory(
+            @RequestParam(defaultValue = "ALL") String underlying,
+            @RequestParam(defaultValue = "0") double minEdge,
+            @RequestParam(required = false) String startDate,
+            @RequestParam(required = false) String endDate,
+            @RequestParam(defaultValue = "7") int days) {
+        // Cached trade-book: signals + ENTERED/EXITED + live/exit PnL
+        return ResponseEntity.ok(tradeBookService.getTradeBook("BID_PARITY", underlying, days, minEdge));
+    }
+
+    @GetMapping("/box-spread/history")
+    public ResponseEntity<Map<String, Object>> boxSpreadHistory(
+            @RequestParam(defaultValue = "ALL") String underlying,
+            @RequestParam(defaultValue = "0") double minEdge,
+            @RequestParam(defaultValue = "7") int days) {
+        return ResponseEntity.ok(tradeBookService.getTradeBook("BOX_SPREAD", underlying, days, minEdge));
+    }
+
+    /** Unified History for Bid Parity / Box / Calendar — ultrafast cached. */
+    @GetMapping("/history/trades")
+    public ResponseEntity<Map<String, Object>> tradeHistory(
+            @RequestParam(defaultValue = "BID_PARITY") String strategyType,
+            @RequestParam(defaultValue = "ALL") String underlying,
+            @RequestParam(defaultValue = "0") double minEdge,
+            @RequestParam(defaultValue = "7") int days) {
+        return ResponseEntity.ok(tradeBookService.getTradeBook(strategyType, underlying, days, minEdge));
+    }
+
+    @GetMapping("/bid-parity/paper-sim")
+    public ResponseEntity<Map<String, Object>> bidParityPaperSim(
+            @RequestParam(defaultValue = "NIFTY") String underlying,
+            @RequestParam(defaultValue = "150") double minEdge,
+            @RequestParam(defaultValue = "180000") double capital,
+            @RequestParam(defaultValue = "2") int maxTradesPerDay,
+            @RequestParam(defaultValue = "10") int days,
+            @RequestParam(defaultValue = "0.6") double fillRate) {
+        try {
+            return ResponseEntity.ok(paperSimulator.run(
+                    underlying, minEdge, capital, maxTradesPerDay, days, fillRate));
+        } catch (Exception e) {
+            log.error("Paper sim failed: {}", e.getMessage(), e);
             return ResponseEntity.ok(Map.of(
-                "timestamp", System.currentTimeMillis(),
-                "underlying", underlying,
-                "marketClosed", true,
-                "opportunities", Collections.emptyList(),
-                "count", 0,
-                "reason", "Market closed. NSE/NFO hours: Mon-Fri 09:15-15:30 IST."
+                    "error", e.getMessage() != null ? e.getMessage() : "sim failed",
+                    "projection", Map.of(),
+                    "daily", List.of(),
+                    "topSignals", List.of()
             ));
         }
-        List<Map<String, Object>> opps = boxSpreadService.scanBoxSpread(underlying);
+    }
+
+    @GetMapping("/box-spread/scan")
+    public ResponseEntity<Map<String, Object>> scanBoxSpread(
+            @RequestParam(defaultValue = "ALL") String underlying,
+            @RequestParam(defaultValue = "BOTH") String expiry,
+            @RequestParam(defaultValue = "75") double minEdge) {
+        java.time.LocalTime nowIST = java.time.LocalTime.now(java.time.ZoneId.of("Asia/Kolkata"));
+        if (nowIST.isBefore(java.time.LocalTime.of(9, 15)) || nowIST.isAfter(java.time.LocalTime.of(15, 30))) {
+            long t0 = System.currentTimeMillis();
+            List<Map<String, Object>> today = tradeBookService.todaysLiveBoardSignals(
+                    "BOX", underlying, expiry, minEdge);
+            Map<String, Object> closed = new LinkedHashMap<>();
+            closed.put("timestamp", System.currentTimeMillis());
+            closed.put("underlying", underlying);
+            closed.put("expiryMode", expiry);
+            closed.put("marketClosed", true);
+            closed.put("fromTodayBoard", true);
+            closed.put("opportunities", today);
+            closed.put("count", today.size());
+            closed.put("scanMs", System.currentTimeMillis() - t0);
+            closed.put("reason", "Market closed — showing today's Box Spread signals (Live board).");
+            closed.put("note", "After hours: Live Signals defaults to today's saved prints (≥ min edge).");
+            return ResponseEntity.ok(closed);
+        }
+        long t0 = System.currentTimeMillis();
+        List<Map<String, Object>> opps = boxSpreadService.scanBoxSpread(underlying, expiry);
+        long scanMs = System.currentTimeMillis() - t0;
+        boolean usedTodayFallback = false;
+        if (opps == null || opps.isEmpty()) {
+            List<Map<String, Object>> today = tradeBookService.todaysLiveBoardSignals(
+                    "BOX", underlying, expiry, minEdge);
+            if (!today.isEmpty()) {
+                opps = today;
+                usedTodayFallback = true;
+            }
+        }
+        Map<String, Object> resp = new LinkedHashMap<>();
+        resp.put("timestamp", System.currentTimeMillis());
+        resp.put("underlying", underlying);
+        resp.put("expiryMode", expiry);
+        resp.put("marketClosed", false);
+        resp.put("fromTodayBoard", usedTodayFallback);
+        resp.put("opportunities", opps != null ? opps : Collections.emptyList());
+        resp.put("count", opps != null ? opps.size() : 0);
+        resp.put("scanMs", scanMs);
+        resp.put("note", usedTodayFallback
+                ? "No fresh live prints — showing today's saved Box Spread signals."
+                : "Same-expiry 4-leg box vs DF·(K2−K1). Paper-only (not Bid Parity 3-leg auto-exec).");
+        return ResponseEntity.ok(resp);
+    }
+
+    @GetMapping("/calendar/scan")
+    public ResponseEntity<Map<String, Object>> scanCalendar(
+            @RequestParam(defaultValue = "ALL") String underlying,
+            @RequestParam(defaultValue = "100") double minEdge) {
+        java.time.LocalTime nowIST = java.time.LocalTime.now(java.time.ZoneId.of("Asia/Kolkata"));
+        if (nowIST.isBefore(java.time.LocalTime.of(9, 15)) || nowIST.isAfter(java.time.LocalTime.of(15, 30))) {
+            long t0 = System.currentTimeMillis();
+            List<Map<String, Object>> today = tradeBookService.todaysLiveBoardSignals(
+                    "CALENDAR", underlying, "BOTH", minEdge);
+            Map<String, Object> closed = new LinkedHashMap<>();
+            closed.put("timestamp", System.currentTimeMillis());
+            closed.put("underlying", underlying);
+            closed.put("marketClosed", true);
+            closed.put("fromTodayBoard", true);
+            closed.put("opportunities", today);
+            closed.put("count", today.size());
+            closed.put("scanMs", System.currentTimeMillis() - t0);
+            closed.put("reason", "Market closed — showing today's Calendar signals (Live board).");
+            closed.put("note", "After hours: Live Signals defaults to today's saved prints (≥ min edge).");
+            return ResponseEntity.ok(closed);
+        }
+        long t0 = System.currentTimeMillis();
+        List<Map<String, Object>> opps = calendarSpreadService.scanCalendarSpreads(underlying);
+        long scanMs = System.currentTimeMillis() - t0;
+        boolean usedTodayFallback = false;
+        if (opps == null || opps.isEmpty()) {
+            List<Map<String, Object>> today = tradeBookService.todaysLiveBoardSignals(
+                    "CALENDAR", underlying, "BOTH", minEdge);
+            if (!today.isEmpty()) {
+                opps = today;
+                usedTodayFallback = true;
+            }
+        }
         Map<String, Object> resp = new LinkedHashMap<>();
         resp.put("timestamp", System.currentTimeMillis());
         resp.put("underlying", underlying);
         resp.put("marketClosed", false);
-        resp.put("opportunities", opps);
-        resp.put("count", opps.size());
+        resp.put("fromTodayBoard", usedTodayFallback);
+        resp.put("opportunities", opps != null ? opps : Collections.emptyList());
+        resp.put("count", opps != null ? opps.size() : 0);
+        resp.put("scanMs", scanMs);
+        resp.put("note", usedTodayFallback
+                ? "No fresh live prints — showing today's saved Calendar signals."
+                : "Weekly vs monthly calendar heuristic (not risk-free). Prefer NIFTY/BN depth.");
         return ResponseEntity.ok(resp);
+    }
+
+    @GetMapping("/jelly-roll/scan")
+    public ResponseEntity<Map<String, Object>> scanJellyRoll(
+            @RequestParam(defaultValue = "ALL") String underlying,
+            @RequestParam(defaultValue = "150") double minEdge) {
+        java.time.LocalTime nowIST = java.time.LocalTime.now(java.time.ZoneId.of("Asia/Kolkata"));
+        if (nowIST.isBefore(java.time.LocalTime.of(9, 15)) || nowIST.isAfter(java.time.LocalTime.of(15, 30))) {
+            long t0 = System.currentTimeMillis();
+            List<Map<String, Object>> today = tradeBookService.todaysLiveBoardSignals(
+                    "JELLY", underlying, "BOTH", minEdge);
+            Map<String, Object> closed = new LinkedHashMap<>();
+            closed.put("timestamp", System.currentTimeMillis());
+            closed.put("underlying", underlying);
+            closed.put("marketClosed", true);
+            closed.put("fromTodayBoard", true);
+            closed.put("opportunities", today);
+            closed.put("count", today.size());
+            closed.put("scanMs", System.currentTimeMillis() - t0);
+            closed.put("reason", "Market closed — showing today's Jelly Roll signals (Live board).");
+            closed.put("note", "After hours: Live Signals defaults to today's saved prints (≥ min edge).");
+            return ResponseEntity.ok(closed);
+        }
+        long t0 = System.currentTimeMillis();
+        List<Map<String, Object>> opps = jellyRollService.scanJellyRoll(underlying);
+        long scanMs = System.currentTimeMillis() - t0;
+        boolean usedTodayFallback = false;
+        if (opps == null || opps.isEmpty()) {
+            List<Map<String, Object>> today = tradeBookService.todaysLiveBoardSignals(
+                    "JELLY", underlying, "BOTH", minEdge);
+            if (!today.isEmpty()) {
+                opps = today;
+                usedTodayFallback = true;
+            }
+        }
+        Map<String, Object> resp = new LinkedHashMap<>();
+        resp.put("timestamp", System.currentTimeMillis());
+        resp.put("underlying", underlying);
+        resp.put("marketClosed", false);
+        resp.put("fromTodayBoard", usedTodayFallback);
+        resp.put("opportunities", opps != null ? opps : Collections.emptyList());
+        resp.put("count", opps != null ? opps.size() : 0);
+        resp.put("scanMs", scanMs);
+        resp.put("note", usedTodayFallback
+                ? "No fresh live prints — showing today's saved Jelly Roll signals."
+                : "Jelly Roll = calendar of synthetics vs DF·(F−K). Paper-only for now.");
+        return ResponseEntity.ok(resp);
+    }
+
+    @GetMapping("/jelly-roll/history")
+    public ResponseEntity<Map<String, Object>> jellyRollHistory(
+            @RequestParam(defaultValue = "ALL") String underlying,
+            @RequestParam(defaultValue = "0") double minEdge,
+            @RequestParam(defaultValue = "7") int days) {
+        return ResponseEntity.ok(tradeBookService.getTradeBook("JELLY_ROLL", underlying, days, minEdge));
+    }
+
+    @GetMapping("/implied-forward")
+    public ResponseEntity<Map<String, Object>> impliedForward(
+            @RequestParam(defaultValue = "ALL") String underlying) {
+        long t0 = System.currentTimeMillis();
+        List<Map<String, Object>> items = jellyRollService.impliedForwardStrip(underlying);
+        Map<String, Object> resp = new LinkedHashMap<>();
+        resp.put("timestamp", System.currentTimeMillis());
+        resp.put("underlying", underlying);
+        resp.put("items", items);
+        resp.put("count", items.size());
+        resp.put("scanMs", System.currentTimeMillis() - t0);
+        resp.put("note", "ATM mid synth implied F vs listed monthly FUT. Feeds Bid Parity / Jelly context.");
+        return ResponseEntity.ok(resp);
+    }
+
+    /** Paper fill recorder for Box / Calendar / Bid Parity when no DB opportunity id. */
+    @PostMapping("/paper-trade")
+    public ResponseEntity<Map<String, Object>> paperTrade(@RequestBody Map<String, Object> body) {
+        Map<String, Object> resp = new LinkedHashMap<>();
+        try {
+            String underlying = String.valueOf(body.getOrDefault("underlying", "NIFTY"));
+            String action = String.valueOf(body.getOrDefault("action", "PAPER"));
+            String strategy = String.valueOf(body.getOrDefault("strategyType",
+                    body.getOrDefault("type", "PAPER")));
+            int strike = body.get("strike") instanceof Number n ? n.intValue()
+                    : Integer.parseInt(String.valueOf(body.getOrDefault("strike", "0")));
+            int lots = body.get("lots") instanceof Number n ? n.intValue() : 1;
+            double edge = body.get("edgeAfterCosts") instanceof Number n ? n.doubleValue()
+                    : body.get("targetEdge") instanceof Number n2 ? n2.doubleValue() : 0;
+            Long opportunityId = null;
+            if (body.get("id") instanceof Number n) opportunityId = n.longValue();
+            else if (body.get("opportunityId") instanceof Number n) opportunityId = n.longValue();
+
+            int lotSize = OptionChainService.getLotSize(underlying);
+            String paperId = "PAPER-" + System.currentTimeMillis();
+
+            boolean conversion = action.toUpperCase(java.util.Locale.ROOT).contains("CONVERSION")
+                    || (action.toUpperCase(java.util.Locale.ROOT).contains("BUY CE")
+                        && action.toUpperCase(java.util.Locale.ROOT).contains("SELL PE"));
+
+            // Prefer executable touch prices (ask for buys, bid for sells)
+            java.math.BigDecimal ceEntry = numBd(body, conversion ? "ceAsk" : "ceBid");
+            if (ceEntry == null) ceEntry = numBd(body, "cePrice");
+            if (ceEntry == null) ceEntry = numBd(body, "ceEntryPrice");
+            java.math.BigDecimal peEntry = numBd(body, conversion ? "peBid" : "peAsk");
+            if (peEntry == null) peEntry = numBd(body, "pePrice");
+            if (peEntry == null) peEntry = numBd(body, "peEntryPrice");
+            java.math.BigDecimal futEntry = numBd(body, "futuresPrice");
+            if (futEntry == null) futEntry = numBd(body, "futPrice");
+            if (futEntry == null) futEntry = numBd(body, "futEntryPrice");
+
+            String legs = String.valueOf(body.getOrDefault("legs", ""));
+            if ((ceEntry == null || peEntry == null || futEntry == null) && legs != null && !legs.isBlank()) {
+                double[] parsed = SignalTradeBookService.parseEntryMarksFromLegs(legs);
+                if (ceEntry == null && parsed[0] > 0) ceEntry = java.math.BigDecimal.valueOf(parsed[0]);
+                if (peEntry == null && parsed[1] > 0) peEntry = java.math.BigDecimal.valueOf(parsed[1]);
+                if (futEntry == null && parsed[2] > 0) futEntry = java.math.BigDecimal.valueOf(parsed[2]);
+            }
+
+            LocalDate expiry = null;
+            if (opportunityId != null) {
+                expiry = historyService.getRepository().findById(opportunityId)
+                        .map(OptionArbOpportunity::getExpiryDate).orElse(null);
+            }
+            String ceSymbol = expiry != null
+                    ? optionChainService.buildNfoSymbol(underlying, expiry, strike, "CE") : null;
+            String peSymbol = expiry != null
+                    ? optionChainService.buildNfoSymbol(underlying, expiry, strike, "PE") : null;
+            LocalDate monthly = optionChainService.getMonthlyExpiry(underlying);
+            String futSymbol = String.format("%s%02d%sFUT", underlying.replace(" ", ""),
+                    monthly.getYear() % 100, monthly.getMonth().name().substring(0, 3));
+
+            if (legs == null || legs.isBlank() || "null".equals(legs)) {
+                if (conversion) {
+                    legs = String.format("BUY %d CE @ %.1f | SELL %d PE @ %.1f | SELL %s FUT @ %.1f",
+                            strike,
+                            ceEntry != null ? ceEntry.doubleValue() : 0,
+                            strike,
+                            peEntry != null ? peEntry.doubleValue() : 0,
+                            underlying,
+                            futEntry != null ? futEntry.doubleValue() : 0);
+                } else {
+                    legs = String.format("SELL %d CE @ %.1f | BUY %d PE @ %.1f | BUY %s FUT @ %.1f",
+                            strike,
+                            ceEntry != null ? ceEntry.doubleValue() : 0,
+                            strike,
+                            peEntry != null ? peEntry.doubleValue() : 0,
+                            underlying,
+                            futEntry != null ? futEntry.doubleValue() : 0);
+                }
+            }
+
+            LivePosition pos = LivePosition.builder()
+                    .opportunityId(opportunityId)
+                    .underlying(underlying)
+                    .strike(strike)
+                    .action(action)
+                    .strategyType(strategy)
+                    .ceSymbol(ceSymbol)
+                    .peSymbol(peSymbol)
+                    .futSymbol(futSymbol)
+                    .lots(Math.max(1, lots))
+                    .lotSize(lotSize)
+                    .ceEntryPrice(ceEntry)
+                    .peEntryPrice(peEntry)
+                    .futEntryPrice(futEntry)
+                    .targetEdge(java.math.BigDecimal.valueOf(edge))
+                    .currentPnl(java.math.BigDecimal.ZERO)
+                    .status("ENTERED")
+                    .ceOrderId(paperId)
+                    .peOrderId(paperId)
+                    .futOrderId(paperId)
+                    .errorMessage("PAPER " + strategy + " · " + legs)
+                    .enteredAt(LocalDateTime.now())
+                    .createdAt(LocalDateTime.now())
+                    .build();
+            livePositionRepo.save(pos);
+            tradeBookService.invalidate();
+            addAuditLog("PAPER", "SUCCESS", strategy + " " + underlying + " " + strike + " edge≈₹" + Math.round(edge));
+            resp.put("status", "SUBMITTED");
+            resp.put("mode", "PAPER");
+            resp.put("tradeStatus", "ENTERED");
+            resp.put("position", pos.toMap());
+            resp.put("message", "Paper position ENTERED (no live broker order)");
+            return ResponseEntity.ok(resp);
+        } catch (Exception e) {
+            resp.put("status", "ERROR");
+            resp.put("message", e.getMessage());
+            return ResponseEntity.ok(resp);
+        }
+    }
+
+    private static java.math.BigDecimal numBd(Map<String, Object> body, String key) {
+        Object v = body.get(key);
+        if (v instanceof Number n) return java.math.BigDecimal.valueOf(n.doubleValue());
+        return null;
+    }
+
+    @PostMapping("/live-positions/{id}/exit")
+    public ResponseEntity<Map<String, Object>> exitLivePosition(
+            @PathVariable long id,
+            @RequestBody(required = false) Map<String, Object> body) {
+        Map<String, Object> resp = new LinkedHashMap<>();
+        try {
+            Double pnl = null;
+            if (body != null && body.get("pnl") instanceof Number n) pnl = n.doubleValue();
+            String note = body != null ? String.valueOf(body.getOrDefault("note", "manual")) : "manual";
+            LivePosition existing = tradeBookService.findPosition(id);
+            if (existing == null) {
+                resp.put("status", "ERROR");
+                resp.put("message", "Position not found: " + id);
+                return ResponseEntity.ok(resp);
+            }
+            boolean brokerOk = autoExecService.closeLiveHedge(existing);
+            if (!brokerOk) {
+                resp.put("status", "ERROR");
+                resp.put("message", "Broker close failed — position left OPEN for retry");
+                addAuditLog("EXIT", "ERROR", "pos=" + id + " broker close failed");
+                return ResponseEntity.ok(resp);
+            }
+            LivePosition pos = tradeBookService.exitPosition(id, pnl, note);
+            resp.put("status", "EXITED");
+            resp.put("tradeStatus", "EXITED");
+            resp.put("position", pos.toMap());
+            resp.put("exitPnl", pos.getCurrentPnl());
+            resp.put("exitedAt", pos.getExitedAt() != null ? pos.getExitedAt().toString() : null);
+            addAuditLog("EXIT", "SUCCESS", "pos=" + id + " pnl=" + pos.getCurrentPnl());
+            return ResponseEntity.ok(resp);
+        } catch (Exception e) {
+            resp.put("status", "ERROR");
+            resp.put("message", e.getMessage());
+            return ResponseEntity.ok(resp);
+        }
     }
 
     @GetMapping("/signals")
@@ -378,12 +771,7 @@ public class OptionArbitrageController {
             allOpen.addAll(runningOpps);
 
             for (OptionArbOpportunity opp : allOpen) {
-                int lotSize = switch (opp.getUnderlying()) {
-                    case "BANKNIFTY" -> 15;
-                    case "MIDCPNIFTY" -> 120;
-                    case "FINNIFTY" -> 60;
-                    default -> 50;
-                };
+                int lotSize = OptionChainService.getLotSize(opp.getUnderlying());
                 double ceP = opp.getCeEntryPrice() != null ? opp.getCeEntryPrice().doubleValue() : 0;
                 double peP = opp.getPeEntryPrice() != null ? opp.getPeEntryPrice().doubleValue() : 0;
 
@@ -402,9 +790,13 @@ public class OptionArbitrageController {
                 }
 
                 double pnl = 0;
-                if ("CONVERSION".equalsIgnoreCase(opp.getAction())) {
+                if ("CONVERSION".equalsIgnoreCase(opp.getAction())
+                        || (opp.getAction() != null && opp.getAction().toUpperCase().contains("BUY CE")
+                        && opp.getAction().toUpperCase().contains("SELL PE"))) {
                     pnl = ((currentCe - ceP) + (peP - currentPe)) * lotSize;
-                } else if ("REVERSAL".equalsIgnoreCase(opp.getAction())) {
+                } else if ("REVERSAL".equalsIgnoreCase(opp.getAction())
+                        || (opp.getAction() != null && opp.getAction().toUpperCase().contains("SELL CE")
+                        && opp.getAction().toUpperCase().contains("BUY PE"))) {
                     pnl = ((ceP - currentCe) + (currentPe - peP)) * lotSize;
                 }
                 pnlMap.put(String.valueOf(opp.getId()), Math.round(pnl * 100.0) / 100.0);
@@ -419,61 +811,83 @@ public class OptionArbitrageController {
 
     @GetMapping("/auto-execute/settings")
     public ResponseEntity<Map<String, Object>> getSettings() {
-        return ResponseEntity.ok(autoExecSettings);
+        return ResponseEntity.ok(autoExecService.getSettings());
     }
 
     @PostMapping("/auto-execute/settings")
-    public ResponseEntity<Map<String, Object>> updateSetting(@RequestParam String key, @RequestParam String value) {
-        try {
-            if ("scanInterval".equals(key) || "normalMaxSets".equals(key) || "bidMaxSets".equals(key)) {
-                autoExecSettings.put(key, Integer.parseInt(value));
-            } else if ("normalEntryEdge".equals(key) || "normalExitEdge".equals(key) || "bidEntryEdge".equals(key) || "bidExitEdge".equals(key) || "maxDailyLoss".equals(key)) {
-                autoExecSettings.put(key, Double.parseDouble(value));
-            } else if ("normalParityEnabled".equals(key) || "bidParityEnabled".equals(key)) {
-                autoExecSettings.put(key, Boolean.parseBoolean(value));
-            } else {
-                autoExecSettings.put(key, value);
-            }
-            addAuditLog("SETTINGS", "INFO", "Updated setting '" + key + "' = " + value);
-        } catch (Exception e) {
-            autoExecSettings.put(key, value);
+    public ResponseEntity<Map<String, Object>> updateSetting(
+            @RequestParam(required = false) String key,
+            @RequestParam(required = false) String value,
+            @RequestBody(required = false) Map<String, Object> body) {
+        if (body != null && !body.isEmpty() && (key == null || key.isBlank())) {
+            Map<String, Object> updated = autoExecService.updateSettingsBulk(body);
+            addAuditLog("SETTINGS", "INFO", "Bulk updated Bid Parity settings (" + body.size() + " keys)");
+            return ResponseEntity.ok(updated);
         }
-        return ResponseEntity.ok(autoExecSettings);
+        if (key == null || value == null) {
+            return ResponseEntity.badRequest().body(Map.of("error", "key and value required (or JSON body for bulk)"));
+        }
+        autoExecService.updateSetting(key, value);
+        addAuditLog("SETTINGS", "INFO", "Updated setting '" + key + "' = " + value);
+        return ResponseEntity.ok(autoExecService.getSettings());
+    }
+
+    @PostMapping("/auto-execute/settings/bulk")
+    public ResponseEntity<Map<String, Object>> updateSettingsBulk(@RequestBody Map<String, Object> body) {
+        Map<String, Object> updated = autoExecService.updateSettingsBulk(body != null ? body : Map.of());
+        addAuditLog("SETTINGS", "INFO", "Bulk updated Bid Parity settings");
+        return ResponseEntity.ok(updated);
+    }
+
+    @GetMapping("/auto-execute/readiness")
+    public ResponseEntity<Map<String, Object>> autoExecReadiness() {
+        return ResponseEntity.ok(autoExecService.probeBrokerReadiness());
     }
 
     @PostMapping("/auto-execute/run")
     public ResponseEntity<Map<String, Object>> runAutoExecNow() {
         LocalTime nowIST = LocalTime.now(ZoneId.of("Asia/Kolkata"));
-        boolean isMarketHours = !nowIST.isBefore(LocalTime.of(9, 15)) && !nowIST.isAfter(LocalTime.of(15, 30));
-
         Map<String, Object> response = new LinkedHashMap<>();
         response.put("timestamp", System.currentTimeMillis());
         response.put("timeIST", nowIST.format(java.time.format.DateTimeFormatter.ofPattern("HH:mm:ss")));
-        response.put("marketOpen", isMarketHours);
+        response.put("marketOpen", !nowIST.isBefore(LocalTime.of(9, 15)) && !nowIST.isAfter(LocalTime.of(15, 30)));
 
-        if (!isMarketHours) {
-            String msg = "Skipped: Off-market hours (" + nowIST.format(java.time.format.DateTimeFormatter.ofPattern("HH:mm:ss")) + " IST). Live NSE feed resumes at 09:15 AM.";
-            addAuditLog("EXECUTION", "WARN", msg);
+        if (nowIST.isBefore(LocalTime.of(9, 15)) || nowIST.isAfter(LocalTime.of(15, 30))) {
             response.put("status", "SKIPPED");
-            response.put("reason", msg);
-            response.put("evaluatedCount", 0);
-            response.put("executedCount", 0);
+            response.put("reason", "Off-market hours");
             return ResponseEntity.ok(response);
         }
 
-        addAuditLog("EXECUTION", "SUCCESS", "Manual execution triggered at " + nowIST.format(java.time.format.DateTimeFormatter.ofPattern("HH:mm:ss")) + " IST.");
-        response.put("status", "COMPLETED");
-        response.put("reason", "Scan completed. Evaluated live market depth quotes.");
-        response.put("evaluatedCount", 3);
-        response.put("executedCount", 0);
+        try {
+            triggerAutoExec();
+            addAuditLog("EXECUTION", "SUCCESS", "Manual auto-execute triggered");
+            response.put("status", "COMPLETED");
+            response.put("message", "Auto-execute cycle triggered. Check logs for results.");
+        } catch (Exception e) {
+            response.put("status", "ERROR");
+            response.put("reason", e.getMessage());
+        }
         return ResponseEntity.ok(response);
     }
 
     @GetMapping("/auto-execute/logs")
-    public ResponseEntity<List<Map<String, Object>>> getAuditLogs() {
-        List<Map<String, Object>> list = new ArrayList<>(auditLogs);
-        Collections.reverse(list);
-        return ResponseEntity.ok(list);
+    public ResponseEntity<List<Map<String, Object>>> getAutoExecLogs() {
+        return ResponseEntity.ok(autoExecService.getExecLogs());
+    }
+
+    @GetMapping("/live-positions")
+    public ResponseEntity<Map<String, Object>> getLivePositions(
+            @RequestParam(defaultValue = "BID") String strategyType,
+            @RequestParam(defaultValue = "true") boolean includeClosedToday,
+            @RequestParam(defaultValue = "BOTH") String mode) {
+        try {
+            return ResponseEntity.ok(tradeBookService.getPositionsBook(strategyType, includeClosedToday, mode));
+        } catch (Exception e) {
+            log.error("live-positions failed: {}", e.getMessage());
+            List<LivePosition> openPositions = livePositionRepo.findAllActive();
+            List<Map<String, Object>> posList = openPositions.stream().map(LivePosition::toMap).toList();
+            return ResponseEntity.ok(Map.of("positions", posList, "count", posList.size()));
+        }
     }
 
     @GetMapping("/auto-execute/execute")
@@ -484,9 +898,33 @@ public class OptionArbitrageController {
         resp.put("timestamp", System.currentTimeMillis());
         resp.put("opportunityId", opportunityId);
         resp.put("multiplier", multiplier);
-        resp.put("status", "SUBMITTED");
-        resp.put("message", "Order submitted for execution");
+        try {
+            historyService.getRepository().findById(opportunityId).ifPresentOrElse(opp -> {
+                autoExecService.evaluateAndExecute(List.of(opp));
+                resp.put("status", "SUBMITTED");
+                resp.put("message", "Opportunity submitted to auto-exec evaluator");
+            }, () -> {
+                resp.put("status", "NOT_FOUND");
+                resp.put("message", "Opportunity not found");
+            });
+        } catch (Exception e) {
+            resp.put("status", "ERROR");
+            resp.put("message", e.getMessage());
+        }
         return ResponseEntity.ok(resp);
+    }
+
+    private void triggerAutoExec() {
+        try {
+            LocalDateTime since = LocalDateTime.now().minusMinutes(2);
+            List<OptionArbOpportunity> recentOpps = historyService.getRepository()
+                    .findByScanTimeBetween(since, LocalDateTime.now());
+            if (!recentOpps.isEmpty()) {
+                autoExecService.evaluateAndExecute(recentOpps);
+            }
+        } catch (Exception e) {
+            log.error("Auto-exec trigger failed: {}", e.getMessage());
+        }
     }
 
     @GetMapping("/export-signals")
